# goo

./: .gitignore  BUILD.md  LEXER_IMPROVEMENTS.md  LEXER_PR_SUMMARY.md  LICENSE  README.md  build.zig  build_and_test.sh  example.goo
.github/: README.md
docs/: BUILD.md  CLEANUP_SUMMARY.md  CODE_ORGANIZATION.md  CODE_ORGANIZATION_IMPLEMENTATION.md  CODE_ORGANIZATION_PLAN.md  CODING_STYLE.md  COMPILER_COMPLETION_PLAN.md  COMPILER_PHASE2_IMPLEMENTATION.md  COMPILER_PHASE2_PLAN.md  COMPILER_PHASE2_PROGRESS.md  CONTRIBUTING.md  OPTIMIZER_PR_SUMMARY.md  PHASE2_MEMORY_CAPABILITY.md  README.md  README_COMPILER_NEXT_STEPS.md  REFACTORING.md  REFACTORING_SUMMARY.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  REORGANIZATION_VERIFICATION.md  ROADMAP.md  STYLE.md  ZIG_INTEGRATION.md  compiler_architecture.md  comptime_simd.md  integration_plan.md  killer_features.md  language_spec.md  memory_pool.md  optimization_plan.md  vectorization.md
examples/: README.md  README_MESSAGING.md  advanced_memory_demo.c  advanced_messaging_demo.c  build.zig  build_demos.sh  channels.goo  comptime_simd.goo  distributed_messaging_demo.c  hello.goo  inspector_demo.c  (+27 more)
src/runtime/memory/: CMakeLists.txt  README.md  goo_allocator.c  goo_allocator.h  goo_allocator_all.zig  goo_allocator_core.zig  goo_arena_allocator.zig  goo_memory_stats.c  goo_pool_allocator.c  goo_pool_allocator.zig  goo_region_allocator.c  goo_region_allocator.zig  memory.zig  memory_bridge.c  memory_callback.c  memory_interface.c  scoped_alloc.zig  scoped_alloc_wrapper.c
src/runtime/memory/zig/: bindings.zig
(+391 files in other folders)
